# watermarkbench

./: README.md  pyproject.toml
src/watermarkbench/: __init__.py
src/watermarkbench/attack/: __init__.py  _core.py  _io.py  _registry.py  _weights.py
src/watermarkbench/embedding/: __init__.py  _io.py  metrics.py
src/watermarkbench/extracting/: __init__.py  metrics.py
tests/: test_attack_smoke.py  test_metrics_smoke.py
