[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "watermarkbench"
version = "0.1.0"
description = "WatermarkBench: attacks + fidelity metrics + extraction metrics"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "YOUR NAME"}]

dependencies = [
  "numpy>=1.23,<3",
  "pillow>=10",
  "torch>=2.0",
  "torchvision>=0.15",
  "opencv-python>=4.7",
  "scikit-image>=0.21",
  "kornia>=0.7",
  "compressai>=1.2"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]



